--- a/src/main/resources/assets/runicarts/lang/en_us.json
+++ b/src/main/resources/assets/runicarts/lang/en_us.json
@@ -4,11 +4,19 @@
   "container.runicarts.runicworkbench.runicenergycost": "%1$s %2$s",
   "container.runicarts.runicworkbench.runicenergyfull": "%1$s/%2$s Total Runic Energy",
   "block.runicarts.runicworkbench": "Runic Workbench",
+  "block.runicarts.runicworkbench.notenoughenergy": "The Runic Workbench does not have enough Runic Energy for the recipe you are trying to make!",
+  "block.runicarts.runicworkbench.dontknowhow": "You do not know how to create the recipe in the Runic Workbench",
   "item.runicarts.blankrune": "Blank Rune",
   "item.runicarts.firerune": "Fire Rune",
   "item.runicarts.waterrune": "Water Rune",
   "item.runicarts.earthrune": "Earth Rune",
   "item.runicarts.airrune": "Air Rune",
+  "item.runicarts.icerune": "Ice Rune",
+  "item.runicarts.plantrune": "Plant Rune",
+  "item.runicarts.voidrune": "Void Rune",
+  "item.runicarts.energyrune": "Energy Rune",
+  "creativemodetab.runicartsblocks": "Runic Arts Blocks",
+  "creativemodetab.runicartsitems": "Runic Arts Items",
 
   "curios.identifier.spiritmancertrinket": "Spiritmancer Trinket",
 
@@ -16,6 +24,10 @@
   "rune.runicarts.earth": "Earth",
   "rune.runicarts.air": "Air",
   "rune.runicarts.water": "Water",
+  "rune.runicarts.ice": "Ice",
+  "rune.runicarts.plant": "Plant",
+  "rune.runicarts.void": "Void",
+  "rune.runicarts.energy": "Energy",
 
   "book.runicarts.runicartsguide.name": "Runic Book",
   "book.runicarts.runicartsguide.basics.name": "Basics",
