--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -28,6 +28,19 @@
   "entity.runology.runicconstruct": "Runic Construct",
   "entity.runology.runicscout": "Runic Scout",
   "item.runology.instabilityreader": "Instability Resonator",
+  "block.runology.shatterstone": "Shatterstone",
+  "block.runology.shatterstonebricks": "Shatterstone Bricks",
+  "block.runology.shatterstonebrickslab": "Shatterstone Brick Slab",
+  "block.runology.shatterstonepillar": "Shatterstone Pillar",
+  "block.runology.shatterstonebrickstairs": "Shatterstone Brick Stairs",
+  "block.runology.shatterstonebrickwall": "Shatterstone Brick Wall",
+  "block.runology.shatterstoneslab": "Shatterstone Slab",
+  "block.runology.shatterstonestairs": "Shatterstone Stairs",
+  "block.runology.shatterstonewall": "Shatterstone Wall",
+  "block.runology.chiseledshatterstonebricks": "Chiseled Shatterstone Bricks",
+  "block.runology.crackedshatterstonebricks": "Cracked Shatterstone Bricks",
+  "block.runology.shatterleaf": "Shatterleaf",
+  "item.runology.shatterberries": "Shatterberries",
 
   "curios.identifier.runictrinket": "Runic Trinket",
 
