--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -60,8 +60,8 @@
   "block.runology.runicanalyzer": "Runic Analyzer",
   "block.runology.research": "Research",
 
-  "runology.analyzetasks.runology.consumeitem": "Consume Item",
-  "runology.analyzetasks.runology.getitem": "Collect Item",
+  "runology.analyzetasks.runology.consumeitem": "Give Items",
+  "runology.analyzetasks.runology.getitem": "Collect Items"
 
   "curios.identifier.runictrinket": "Runic Trinket",
 
