--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -58,10 +58,13 @@
   "container.runology.runicanalyzer": "Runic Analyzer",
   "container.runology.runicanalyzer.complete": "Complete",
   "block.runology.runicanalyzer": "Runic Analyzer",
-  "block.runology.research": "Research",
+  "item.runology.research": "Research",
+  "item.runology.research.complete": "Complete",
+  "item.runology.research.previousentryneeded": "You have not unlocked the previous entries!",
+  "item.runology.research.advancementneeded": "You do not have the required advancement!",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
-  "runology.analyzetasks.runology.getitem": "Collect Items"
+  "runology.analyzetasks.runology.getitem": "Collect Items",
 
   "curios.identifier.runictrinket": "Runic Trinket",
 
@@ -78,8 +81,37 @@
   "book.runology.runologyguide.basics.name": "Basics",
   "book.runology.runologyguide.equipment.name": "Equipment",
   "book.runology.runologyguide.purity.name": "Purity",
-  "book.runology.runologyguide.forgottenpractices.name": "Forgotten Practices",
+  "book.runology.runologyguide.ancientdiscovery.name": "Ancient Discovery",
   "book.runology.runologyguide.runicmysteries.name": "Runic Mysteries",
+
+  "book.runology.runologyguide.basics.runicworkbench.name": "Runic Workbench",
+  "book.runology.runologyguide.basics.runicworkbench.page1.title": "Runic Workbench",
+  "book.runology.runologyguide.basics.runicworkbench.page1.title2": "Copper Gauntlet",
+  "book.runology.runologyguide.basics.runicworkbench.page2.text": "Some things need runic energy for me to create, The runic workbench will allow me to add runic energy to recipes that it will get by consuming runes, It can hold 1000 of each type of runic energy",
+  "book.runology.runologyguide.basics.runicanalyzer.name": "Runic Analyzer",
+  "book.runology.runologyguide.basics.runicanalyzer.page1.title": "Runic Analyzer",
+  "book.runology.runologyguide.basics.runicanalyzer.page1.text": "While these first few things have been easy to figure out, for some other stuff, I will need to use the Runic Analyzer to figure out how to make",
+  "book.runology.runologyguide.basics.baserunes.name": "Base Runes",
+  "book.runology.runologyguide.basics.baserunes.page1.title": "Blank Rune",
+  "book.runology.runologyguide.basics.baserunes.page1.title2": "Fire Rune",
+  "book.runology.runologyguide.basics.baserunes.page2.title": "Earth Rune",
+  "book.runology.runologyguide.basics.baserunes.page2.title2": "Air Rune",
+  "book.runology.runologyguide.basics.baserunes.page3.title": "Water Rune",
+  "book.runology.runologyguide.basics.baserunes.page3.text": "Fire, Earth, Air, and Water, the 4 base elements of this universe, if I capture them in a rune then I can convert them to runic energy and harness their power",
+  "book.runology.runologyguide.basics.voidglass.name": "Void Glass",
+  "book.runology.runologyguide.basics.voidglass.page1.title": "Void Glass",
+  "book.runology.runologyguide.basics.voidglass.page1.text": "Infusing glass with void runic energy seems to create a material that displays some sort of void similar to what I have noticed with the end portals",
+  "book.runology.runologyguide.basics.runetransformations.name": "Rune Transformations",
+  "book.runology.runologyguide.basics.runetransformations.page1.title": "Rune Transformations",
+  "book.runology.runologyguide.basics.runetransformations.page1.text": "It seems that given the right circumstances, a rune may transform into a secondary type, I have written all 4 rune transformations and how to cause the transformation I know of at the moment on the following pages",
+  "book.runology.runologyguide.basics.runetransformations.page2.title": "Void Rune",
+  "book.runology.runologyguide.basics.runetransformations.page2.text": "By throwing an Air Rune on the ground in the end, I can transform it into a Void Rune",
+  "book.runology.runologyguide.basics.runetransformations.page3.title": "Energy Rune",
+  "book.runology.runologyguide.basics.runetransformations.page3.text": "By striking a Fire Rune with lightning, I can transform it into a Void Rune",
+  "book.runology.runologyguide.basics.runetransformations.page4.title": "Plant Rune",
+  "book.runology.runologyguide.basics.runetransformations.page4.text": "By throwing an Earth Rune on the ground and waiting for a plant to grow around it, I can transform it into a Void Rune",
+  "book.runology.runologyguide.basics.runetransformations.page5.title": "Ice Rune",
+  "book.runology.runologyguide.basics.runetransformations.page5.text": "By throwing a Water Rune into powdered snow, I can transform it into a Void Rune",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
