--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -63,6 +63,14 @@
   "item.runology.research.previousentryneeded": "You have not unlocked the previous entries!",
   "item.runology.research.advancementneeded": "You do not have the required advancement!",
   "entity.runology.runicoverseer": "Runic Overseer",
+  "entity.runology.runicoverseer.dialogue1": "<Runic Overseer> So... You finally arrived.",
+  "entity.runology.runicoverseer.dialogue2": "<Runic Overseer> I have been waiting for you.",
+  "entity.runology.runicoverseer.dialogue3": "<Runic Overseer> You kept playing with instability.",
+  "entity.runology.runicoverseer.dialogue4": "<Runic Overseer> Instability, while it may be the fifth element...",
+  "entity.runology.runicoverseer.dialogue5": "<Runic Overseer> It is not something you should play with.",
+  "entity.runology.runicoverseer.dialogue6": "<Runic Overseer> Now, To protect both of our realms from destruction...",
+  "entity.runology.runicoverseer.dialogue7": "<Runic Overseer> I will destroy you!",
+  "entity.runology.runicoverseer.interrupt": "<Runic Overseer> I see... You don't care for what I say, You just want to kill... In that case, you are better off dead!",
   "entity.runology.voidbullet": "Void Bullet",
   "entity.runology.voidbeam": "Void Beam",
   "entity.runology.voidbomb": "Void Bomb",
