--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -79,6 +79,8 @@
   "item.runology.mysteriumtotem": "Mysterium Totem",
   "item.runology.mysteriumcore": "Mysterium Core",
   "item.runology.shatteredsoul": "Shattered Soul",
+  "item.runology.purityarrow": "Purity Arrow",
+  "entity.runology.purityarrow": "Purity Arrow",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
   "runology.analyzetasks.runology.getitem": "Collect Items",
