--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -95,6 +95,7 @@
   "rune.runology.plant": "Plant",
   "rune.runology.void": "Void",
   "rune.runology.energy": "Energy",
+  "rune.runology.instability": "Instability",
 
   "book.runology.runologyguide.name": "Runic Codex",
   "book.runology.runologyguide.basics.name": "Basics",
