--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -102,7 +102,7 @@
 
   "book.runology.runologyguide.name": "Runic Codex",
   "book.runology.runologyguide.basics.name": "Basics",
-  "book.runology.runologyguide.equipment.name": "Equipment",
+  "book.runology.runologyguide.artifice.name": "Artifice",
   "book.runology.runologyguide.purity.name": "Purity",
   "book.runology.runologyguide.ancientdiscovery.name": "Ancient Discovery",
   "book.runology.runologyguide.runicmysteries.name": "Runic Mysteries",
@@ -121,9 +121,9 @@
   "book.runology.runologyguide.basics.baserunes.page2.title2": "Air Rune",
   "book.runology.runologyguide.basics.baserunes.page3.title": "Water Rune",
   "book.runology.runologyguide.basics.baserunes.page3.text": "Fire, Earth, Air, and Water, the 4 base elements of this universe, if I capture them in a rune then I can convert them to runic energy and harness their power",
-  "book.runology.runologyguide.basics.voidglass.name": "Void Glass",
-  "book.runology.runologyguide.basics.voidglass.page1.title": "Void Glass",
-  "book.runology.runologyguide.basics.voidglass.page1.text": "Infusing glass with void runic energy seems to create a material that displays some sort of void similar to what I have noticed with the end portals",
+  "book.runology.runologyguide.artifice.voidglass.name": "Void Glass",
+  "book.runology.runologyguide.artifice.voidglass.page1.title": "Void Glass",
+  "book.runology.runologyguide.artifice.voidglass.page1.text": "Infusing glass with void runic energy seems to create a material that displays some sort of void similar to what I have noticed with the end portals",
   "book.runology.runologyguide.basics.runetransformations.name": "Rune Transformations",
   "book.runology.runologyguide.basics.runetransformations.page1.title": "Rune Transformations",
   "book.runology.runologyguide.basics.runetransformations.page1.text": "It seems that given the right circumstances, a rune may transform into a secondary type, I have written all 4 rune transformations and how to cause the transformation I know of at the moment on the following pages",
@@ -135,14 +135,22 @@
   "book.runology.runologyguide.basics.runetransformations.page4.text": "By throwing an Earth Rune on the ground and waiting for a plant to grow around it, I can transform it into a Void Rune",
   "book.runology.runologyguide.basics.runetransformations.page5.title": "Ice Rune",
   "book.runology.runologyguide.basics.runetransformations.page5.text": "By throwing a Water Rune into powdered snow, I can transform it into a Void Rune",
-  "book.runology.runologyguide.basics.purityrune.name": "Purity Rune",
+  "book.runology.runologyguide.purity.purityrune.name": "Purity Rune",
   "book.runology.runologyguide.purity.purityrune.page1.title": "Purity Powder",
   "book.runology.runologyguide.purity.purityrune.page1.title2": "Purity Rune",
   "book.runology.runologyguide.purity.purityrune.page2.text": "The 4 base elements, when combined can create true purity, with this purity I can fight against anything impure",
-  "book.runology.runologyguide.basics.purityarrow.name": "Purity Arrow",
-  "book.runology.runologyguide.purity.purityarrow.page1.title2": "Purity Arrow",
-  "book.runology.runologyguide.purity.purityarrow.page1.text": "Using 1 Purity Powder, I can purify 8 arrows making them able to fight purity by being shot",
+  "book.runology.runologyguide.purity.purityarrow.name": "Purity Arrow",
+  "book.runology.runologyguide.purity.purityarrow.page1.title": "Purity Arrow",
+  "book.runology.runologyguide.purity.purityarrow.page1.text": "Using 1 Purity Powder, I can purify 8 arrows making them able to fight the impure by being shot",
   "book.runology.runologyguide.purity.purityarrow.page2.text": "If a hole in reality were to ever appear, this will work fine for patching it, It also deals more damage towards impure mobs such as the undead, I have a feeling there may be more impurity in another realm close to mine though...",
+  "book.runology.runologyguide.runicmysteries.shatters.name": "Shatters",
+  "book.runology.runologyguide.runicmysteries.shatters.page1.title": "Shatters",
+  "book.runology.runologyguide.runicmysteries.shatters.page1.text": "It seems a shatter has appeared, they appear to be a hole in the fabric of reality, creating a bridge to another realm, however it will need to be stabilized for me to go through",
+  "book.runology.runologyguide.runicmysteries.shatters.page2.text": "Shatters appear to spread some form of impurity, converting most natural blocks into shatterstone, converting ores into mysterium ore, converting logs into shatterwood and killing leaves, I may be able to get something useful from this...",
+  "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.name": "Mysterium Gauntlet",
+  "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.page1.title": "Mysterium Gauntlet",
+  "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.page1.title2": "Empowered Mysterium Gauntlet",
+  "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.page2.text": "If I am correct, by creating a gauntlet out of mysterium and empowering it with 8 mysterium cores, I can stabilize a shatter by giving it the power of all 8 mysterium cores, Entering a stabilized shatter is likely a one way trip, I feel an incredible power from the other side, I may need to defeat that incredible power to return to my realm",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
