--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -63,14 +63,14 @@
   "item.runology.research.previousentryneeded": "You have not unlocked the previous entries!",
   "item.runology.research.advancementneeded": "You do not have the required advancement!",
   "entity.runology.runicoverseer": "Runic Overseer",
-  "entity.runology.runicoverseer.dialogue1": "<Runic Overseer> So... You finally arrived.",
-  "entity.runology.runicoverseer.dialogue2": "<Runic Overseer> I have been waiting for you.",
-  "entity.runology.runicoverseer.dialogue3": "<Runic Overseer> You kept playing with instability.",
-  "entity.runology.runicoverseer.dialogue4": "<Runic Overseer> Instability, while it may be the fifth element...",
-  "entity.runology.runicoverseer.dialogue5": "<Runic Overseer> It is not something you should play with.",
-  "entity.runology.runicoverseer.dialogue6": "<Runic Overseer> Now, To protect both of our realms from destruction...",
-  "entity.runology.runicoverseer.dialogue7": "<Runic Overseer> I will destroy you!",
-  "entity.runology.runicoverseer.interrupt": "<Runic Overseer> I see... You don't care for what I say, You just want to kill... In that case, you are better off dead!",
+  "entity.runology.runicoverseer.dialogue1": "<Runic Overseer> So... You came to me looking to leave this realm.",
+  "entity.runology.runicoverseer.dialogue2": "<Runic Overseer> I'm afraid I can't let you leave...",
+  "entity.runology.runicoverseer.dialogue3": "<Runic Overseer> Every Runologist eventually goes to harnessing instability.",
+  "entity.runology.runicoverseer.dialogue4": "<Runic Overseer> It's the only way the shattering has made it across all of the realms it has...",
+  "entity.runology.runicoverseer.dialogue5": "<Runic Overseer> A few realms have a strong natural barrier which allows for it to defend against the shattering, however, all natural barriers eventually fade away...",
+  "entity.runology.runicoverseer.dialogue6": "<Runic Overseer> I once tried to harness it like you did, and now look at this realm...",
+  "entity.runology.runicoverseer.dialogue7": "<Runic Overseer> Now, For me to protect the realm you call home, I will destroy you!",
+  "entity.runology.runicoverseer.interrupt": "<Runic Overseer> I see... You don't care for what I say, Now, I will destroy you!",
   "entity.runology.voidbullet": "Void Bullet",
   "entity.runology.voidbeam": "Void Beam",
   "entity.runology.voidbomb": "Void Bomb",
