--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -94,6 +94,9 @@
   "item.runology.iceshardspellcrystal": "Ice Shards Spell Crystal",
   "item.runology.purifiedflesh": "Purified Flesh",
   "block.runology.castingtable": "Casting Table",
+  "block.runology.mysteriousaltar": "Mysterious Altar",
+  "item.runology.dimensionalthreatmusicdisc": "Music Disc",
+  "item.runology.dimensionalthreatmusicdisc.desc": "DavidRarria09 - Dimensional Threat",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
   "runology.analyzetasks.runology.getitem": "Collect Items",
@@ -116,6 +119,7 @@
   "book.runology.runologyguide.artifice.name": "Artifice",
   "book.runology.runologyguide.purity.name": "Purity",
   "book.runology.runologyguide.ancientdiscovery.name": "Ancient Discovery",
+  "book.runology.runologyguide.spellcasting.name": "Spellcasting",
   "book.runology.runologyguide.runicmysteries.name": "Runic Mysteries",
 
   "book.runology.runologyguide.basics.runicworkbench.name": "Runic Workbench",
@@ -165,6 +169,27 @@
   "book.runology.runologyguide.purity.purifiedflesh.name": "Purified Flesh",
   "book.runology.runologyguide.purity.purifiedflesh.page1.title": "Purified Flesh",
   "book.runology.runologyguide.purity.purifiedflesh.page1.text": "By infusing rotten flesh with purity, I can purify it allowing me to eat it without any side effects",
+  "book.runology.runologyguide.runicmysteries.theshatterrealm.name": "The Shatter Realm",
+  "book.runology.runologyguide.runicmysteries.theshatterrealm.page1.title": "The Shatter Realm",
+  "book.runology.runologyguide.runicmysteries.theshatterrealm.page1.text": "What... happened here? Everything is dead and corrupted... There doesnt seem to be any remaining natural barrier... Was this the result of runic magic? Is my realm heading down this path? Whatever happened, I must figure it out to prevent it from happening to my realm!",
+  "book.runology.runologyguide.runicmysteries.shattercrystal.name": "Shattercrystal",
+  "book.runology.runologyguide.runicmysteries.shattercrystal.page1.title": "Shattercrystal",
+  "book.runology.runologyguide.runicmysteries.shattercrystal.page1.text": "Instability may have caused this... These crystals seem to be made out of instability, These crystals may be useful once I get back...",
+  "book.runology.runologyguide.runicmysteries.shatterleafandshatterberries.name": "Shatterleaf & Shatterberries",
+  "book.runology.runologyguide.runicmysteries.shatterleafandshatterberries.page1.title": "Shatterleaf & Shatterberries",
+  "book.runology.runologyguide.runicmysteries.shatterleafandshatterberries.page1.text": "It seems before whatever happened, these were plants, it is impossible to tell what they were before... but now... they are corrupted but edible...",
+  "book.runology.runologyguide.runicmysteries.anescape.name": "An Escape",
+  "book.runology.runologyguide.runicmysteries.anescape.page1.title": "An Escape",
+  "book.runology.runologyguide.runicmysteries.anescape.page1.text": "So this is the source of that incredible power, I must be ready to fight for my life if I want to escape... I have the feeling this will not be easy... For me to summon the incredible power, I must use a mysterium totem on the altar, I believe I can find a place with one if I search around enough...",
+  "book.runology.runologyguide.runicmysteries.mysteriumtotem.name": "Mysterium Totem",
+  "book.runology.runologyguide.runicmysteries.mysteriumtotem.page1.title": "Mysterium Totem",
+  "book.runology.runologyguide.runicmysteries.mysteriumtotem.page1.text": "This totem has a tiny fraction of that incredible power beaming into it, so little that I am unable to see it, but just enough for me to detect it, I could likely replicate this myself...",
+  "book.runology.runologyguide.runicmysteries.shatteredsoul.name": "Shattered Soul",
+  "book.runology.runologyguide.runicmysteries.shatteredsoul.page1.title": "Shattered Soul",
+  "book.runology.runologyguide.runicmysteries.shatteredsoul.page1.text": "It seems even after surviving the shattering, their soul was shattered, can nothing can survive the shattering unscathed?",
+  "book.runology.runologyguide.runicmysteries.realityslicer.name": "Reality Slicer",
+  "book.runology.runologyguide.runicmysteries.realityslicer.page1.title": "Reality Slicer",
+  "book.runology.runologyguide.runicmysteries.realityslicer.page1.text": "This blade, it can slice open holes in reality, These shatters are weak but stable meaning I can go through them, but they will close on their own after a short time",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
