--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -93,7 +93,7 @@
   "item.runology.fireballspellcrystal": "Fireball Spell Crystal",
   "item.runology.iceshardspellcrystal": "Ice Shards Spell Crystal",
   "item.runology.purifiedflesh": "Purified Flesh",
-  "block.runology.castingtable": "Casting Table",
+  "block.runology.spelltable": "Spell Table",
   "block.runology.mysteriousaltar": "Mysterious Altar",
   "item.runology.dimensionalthreatmusicdisc": "Music Disc",
   "item.runology.dimensionalthreatmusicdisc.desc": "DavidRarria09 - Dimensional Threat",
